frontend/test/should_fail/defYield_007a.grg
using defYield;

rule t
{
	modify {
		def x:B;
		y:B;
		eval { yield y = x; }
	}
}

pattern p modify (x:B, def z:B)
{
	modify {
		eval { yield x = z; }
	}
}

